--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="/dist/app.css">
+    <link rel="stylesheet" href="/dist/bundle.js">
 
     <title>Sarah Rios Portfolio</title>
   </head>
@@ -22,11 +23,23 @@
                     <a class="nav-link" href="#">Projects</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="#">Skills</a>
+                </li>
+                 <li class="nav-item">
                     <a class="nav-link" href="#">Resume</a>
                 </li>
                 </ul>
             </div>
     </nav>
+
+    <div class="container border">
+       <div class="row text-align-end">
+           <span>Sarah Rios</span>
+       </div> 
+       <div class="row col-4">
+           <img src="https://www.parentingforbrain.com/wp-content/uploads/brain-development-children.jpg">
+       </div>
+    </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
