--- a/views/home.ejs
+++ b/views/home.ejs
@@ -13,38 +13,43 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-expand navbar-dark bg-dark">
-        <div class="collapse navbar-collapse justify-content-center">
-            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                <li class="nav-item active"> 
-                    <a class="nav-link" href="#">About <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Projects</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Skills</a>
-                </li>
-                 <li class="nav-item">
-                    <a class="nav-link" href="#">Resume</a>
-                </li>
-                </ul>
-            </div>
-    </nav>
 
-    <div class="container border">
+    <%- include ('./partials/nav.ejs'); -%>
+    <!-- <div class="container border">
        <div class="row text-align-end">
            <span>Sarah Rios</span>
        </div> 
        <div class="row col-4">
            <img src="https://www.parentingforbrain.com/wp-content/uploads/brain-development-children.jpg">
        </div>
-    </div>
+    </div> -->
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-  </body>
+<main role="main">
+
+  <section class="jumbotron text-center">
+    <div class="container">
+        <div class="row">
+            <div class="col-4">
+                <img class="rounded img-fluid" src="https://lh3.googleusercontent.com/Fl246rQ9aMT2VlWKpUCQJn_KDGQCfvohbjIoVMKRrbOu6LDgURB4pIsdAa6i0MiLq1lAjL562b5F_DxH9MG3l6o9SD-7W6QT-xr_pLpSIcxLVFKbe34mC9yodKVj9vjQNySML0ehmE_8rZMu6Wa98-oM8ZUMAyIQGHuKZTsfmF9UujulSJG0soxw3hDZzfE24crH3NUSJU7LU18aGxeTgrT-OH1gUhUPr7nbxLvBHlFSgtzYDwkTjfp2PL7cQ4HtBYLQ-pJEpRDf5CVCs9kkNdDarvBwkXmGu_R-KFKxcr8BEKGOVJYDt57Tnf516tvfVucaOi7AyLd30-2hmUrTpTSDmTM_vB8q-AQw53Jm72b6gVZ-2i4iZFwrFJTbelnwFjZ0_Z7dFMkzrCktJjwhMug2EDDb7VsdJIaJ2TBvYkuEbHdinUXT6oBXQ_QYXpzos4i8Z2FR15pq0uitTHjrPj765HXFo_fXSzMSaO6VUmbFtmcFtSXdT36OPXZIILKIujcWPGwZB8PyWIeWYN8WZZeeMuD9mYJMHv0VLFhBSrPkVb1qt_Rb8CU1mPOov2cVFDNJjQi_ahwSecYE5mnlfAXuZ8ormu6m0Vn7Ce6IGtDCQEXBBaogumAGUlTfINsMT87g9cizfLnlp9f58VWYT3v2aPbfCAths-3nv3uVAb2hShMJoy6Y=w283-h428-no">
+            </div>
+            <div class="col-4">
+                <h1>Sarah Rios</h1>
+                <p class="lead text-muted">Full-Stack Web Developer.</p>
+            </div>   
+         </div>
+         <p>
+            <a href="#" class="btn btn-primary my-2">Check out my Projects</a>
+        </p>
+    </div>
+  </section>
+
+ 
+   
+
+</main>
+
+<%- include ('./partials/footer.ejs'); -%>
+
+
+</body>
 </html>
