--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -3,16 +3,16 @@
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                
                 <li class="nav-item <%= page =='home'?'active':'' %>"> 
-                    <a class="nav-link" href="#">About <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="/">About <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item <%= page =='projects'?'active':'' %>">
-                    <a class="nav-link" href="#">Projects</a>
+                    <a class="nav-link" href="/projects">Projects</a>
                 </li>
                 <li class="nav-item <%= page =='skills'?'active':'' %>">
-                    <a class="nav-link" href="#">Skills</a>
+                    <a class="nav-link" href="/skills">Skills</a>
                 </li>
                  <li class="nav-item <%= page =='resume'?'active':'' %>">
-                    <a class="nav-link" href="#">Resume</a>
+                    <a class="nav-link" href="/resume">Resume</a>
                 </li>
                 </ul>
             </div>
