formatting and about me content

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -3,6 +3,6 @@
     <p class="float-right">
       <a href="#">Back to top</a>
     </p>
-    <p>Built by Sarah Rios &copy; with Node.js, Express, and Bootstrap Webpack.</p>
+    <p>Built with Node.js, Express, and Bootstrap Webpack.</p>
   </div>
 </footer>
