--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,45 +1,63 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="/dist/app.css">
-    <link rel="stylesheet" href="/dist/bundle.js">
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Sarah Rios</title>
-  </head>
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="/dist/app.css">
+  <link rel="stylesheet" href="/dist/bundle.js">
 
-  <body style="background: url('https://lh3.googleusercontent.com/xN6AyzHwK8wkCr0xURg9IwDRs8W4NrofDYY2J6I41Efr-FQIrTxwTQhV4TtwbjABJNMDynVzb1xdwB8WkllRgDynz3kyz953DoFYImeqsqljLvKjPVZC-67R7vCJFqfYREZgQfvTYRFrBxsNrEkgxekGCSLyidOzdk3UGzBtfmP2HUrXp41e2lZ3DxM1TADJKjFTQnx4lJcRlcKKC2gSXyVCjg16p8-CISZCPry0beJQsmBJmAd02fPe2MZjCVek5E036z893SiU6wVwtIFLXsiLHab243ukGVOH8PSRk6ODseY-G_tVDncB8clCzRsdOlXfuop6gMKb5rs0rquxaInPD17K2uqh7l1ColL372japsVWn3OEtHd9ycDfFr2eP-NasCMHWUkd9VI6Js27yIerehTqnkjNW-CMTcHFGIejKf6NvvUlOgmgagNTvEjdVO5YO2uDizX-FYBZp52S-I_dWbfxXGYzz7D4kXPxWrDx-3UZ2M7UlwiXm6GLMw8CKgEWgASczoqYvL67b5BM9w2ukuL0DfM48hwn9YSXTAo0f5UFbXjXIqvpYlqCFvmqZ1Vw5EWAKe7IIU6PAa_4PZZNO7ViNaiGnZ1LumJj489evGgrvJSIpdqrOTniDWlsFVhuCGqMu-pV4orlcPAcKlklsCFHjjEIF-EPivKyLVSFh1OHw7b5=w1163-h1805-no') fixed; background-size:cover; ">
+  <title>Sarah Rios</title>
+</head>
 
-    <%- include ('./partials/nav.ejs'); -%>
- 
+<body
+  style="background: url('https://lh3.googleusercontent.com/xN6AyzHwK8wkCr0xURg9IwDRs8W4NrofDYY2J6I41Efr-FQIrTxwTQhV4TtwbjABJNMDynVzb1xdwB8WkllRgDynz3kyz953DoFYImeqsqljLvKjPVZC-67R7vCJFqfYREZgQfvTYRFrBxsNrEkgxekGCSLyidOzdk3UGzBtfmP2HUrXp41e2lZ3DxM1TADJKjFTQnx4lJcRlcKKC2gSXyVCjg16p8-CISZCPry0beJQsmBJmAd02fPe2MZjCVek5E036z893SiU6wVwtIFLXsiLHab243ukGVOH8PSRk6ODseY-G_tVDncB8clCzRsdOlXfuop6gMKb5rs0rquxaInPD17K2uqh7l1ColL372japsVWn3OEtHd9ycDfFr2eP-NasCMHWUkd9VI6Js27yIerehTqnkjNW-CMTcHFGIejKf6NvvUlOgmgagNTvEjdVO5YO2uDizX-FYBZp52S-I_dWbfxXGYzz7D4kXPxWrDx-3UZ2M7UlwiXm6GLMw8CKgEWgASczoqYvL67b5BM9w2ukuL0DfM48hwn9YSXTAo0f5UFbXjXIqvpYlqCFvmqZ1Vw5EWAKe7IIU6PAa_4PZZNO7ViNaiGnZ1LumJj489evGgrvJSIpdqrOTniDWlsFVhuCGqMu-pV4orlcPAcKlklsCFHjjEIF-EPivKyLVSFh1OHw7b5=w1163-h1805-no') fixed; background-size:cover; ">
 
-<main role="main">
+  <%- include ('./partials/nav.ejs'); -%>
 
-<div class="container">
-  <div class="card border-0 shadow my-5">
-    <div class="card-body p-5">
-       <div class="row">
-         <div class="col-6 pl-5">
-                <h1>Sarah Rios</h1>
-                <p class="lead text-muted">Full-Stack Web Developer.</p>
-            </div>  
-            <div class="col-6 d-flex justify-content-center">
-                <img class="rounded img-fluid" src="https://lh3.googleusercontent.com/0UTEnPo_KAYqF4iGOcSg5_W8d5sIVqSYrPiZhMeBw80xdF1Oa3oRHEREYrJiwUTn6WMzFmUssld_yOVLOtfESEC_zDkXmMhpBE0rArSwsagXC_-_sUXLY3b8310YHB9PhQQY1gRbNjhMRw3ZCnGWO-8VFhM1GDJF3dJdSaFCZO5si5M4WscDRIH-ngChu-YaJPLyAjRp_RnhU-Hfh89WamwF16ESV2XwKXUTGklYfiQehyjqdGkFcNsB9Km8nJ8ogC2rPutFp_2KekqlAY5x5E6ljJg7LQ5lvruluPrH9hHpu92qU-uGk4UqY0U3eBTtwGmq7QxNE6o4SJkW8Ow-5EtoWfNdltuFsukAEwecbLcCPqL_k76TCauCfHH-K3ORhpJvmbsPbV-dlTmHeYpZiNYonF-TPhhoJWvrApEgJKKgzVkgS3n_bKbYnBqEhNq_zYHy9WLmH5mWaXOirxm1Ngj_RziR5j7m__-ITTBSxq48b-ujhrFoLaXRMzIJDz9SGvfRh9Ng5YCxatgSmGK_F19mjy64RkRu_TJnnEVUjxM2olbpg16mZG8wJlVfk03VJOrzYgYfNFRbPWI6qQxgZbbrHRbk9vmlhHSe0DhrkpOulmYe_jRWhnN2Nq8Op-vr-kNPhYXLAVP9rTa1j9h7Grfq8KXi40jI1T_w9PdxACARpJoHb-WB=w281-h386-no">
+
+  <main role="main">
+
+    <div class="container">
+      <div class="card border-0 shadow my-5">
+        <div class="card-body p-5">
+          <div class="row">
+            <div class="col-6">
+              <h1>Sarah Rios</h1>
+              <p class="lead text-muted">Full-Stack Web Developer</p>
+              <img class="rounded img-fluid"
+                src="https://lh3.googleusercontent.com/0UTEnPo_KAYqF4iGOcSg5_W8d5sIVqSYrPiZhMeBw80xdF1Oa3oRHEREYrJiwUTn6WMzFmUssld_yOVLOtfESEC_zDkXmMhpBE0rArSwsagXC_-_sUXLY3b8310YHB9PhQQY1gRbNjhMRw3ZCnGWO-8VFhM1GDJF3dJdSaFCZO5si5M4WscDRIH-ngChu-YaJPLyAjRp_RnhU-Hfh89WamwF16ESV2XwKXUTGklYfiQehyjqdGkFcNsB9Km8nJ8ogC2rPutFp_2KekqlAY5x5E6ljJg7LQ5lvruluPrH9hHpu92qU-uGk4UqY0U3eBTtwGmq7QxNE6o4SJkW8Ow-5EtoWfNdltuFsukAEwecbLcCPqL_k76TCauCfHH-K3ORhpJvmbsPbV-dlTmHeYpZiNYonF-TPhhoJWvrApEgJKKgzVkgS3n_bKbYnBqEhNq_zYHy9WLmH5mWaXOirxm1Ngj_RziR5j7m__-ITTBSxq48b-ujhrFoLaXRMzIJDz9SGvfRh9Ng5YCxatgSmGK_F19mjy64RkRu_TJnnEVUjxM2olbpg16mZG8wJlVfk03VJOrzYgYfNFRbPWI6qQxgZbbrHRbk9vmlhHSe0DhrkpOulmYe_jRWhnN2Nq8Op-vr-kNPhYXLAVP9rTa1j9h7Grfq8KXi40jI1T_w9PdxACARpJoHb-WB=w281-h386-no">
             </div>
-             
-         </div>
-         <p>
+            <div class="col-6 d-flex flex-column justify-content-center">
+
+              <p>My name is Sarah. I'm a Geographic Information Systems (GIS) Analyst turned Full-Stack Developer. Due to the nature of GIS, it is a natural progression.
+      
+              <p>I enjoy exploring systems and learning about how things work together. I often find myself in classrooms and workshops, and I enjoy participating in local communities.</p>
+
+              <p>You'll find me in Houston, spending the weekends with my dogs and playing board games with friends. Feel free to connect with me below.</p>
+
+            </div> 
+          </div>
+          <div class="row">
+             <div class="col-6 offset-6 d-flex justify-content-center">
+                <a class="p-1" style="height: 40px;" href="#"><img alt="GitHub" src='/images/github.svg' height="40px"
+                    width="40px"></a>
+                <a class="p-1"style="height: 40px;" href="#"><img alt="LinkedIn" src='/images/linkedin.svg' height="40px"
+                    width="40px"></a>
+                <a class="p-1" style="height: 40px;" href="#"><img alt="email" src='/images/email.svg' height="40px" width="40px"></a>
+              </div>
+          </div>
+          <p>
             <a href="#" class="btn btn-dark">Check out my Projects</a>
-        </p>
-      <div style="height: 700px"></div>
-      <p class="lead mb-0">You've reached the end!</p>
+          </p>
+          <!-- <div style="height: 700px"></div>
+          <p class="lead mb-0">You've reached the end!</p> -->
+        </div>
+      </div>
     </div>
-  </div>
-</div>
 
 
 
@@ -48,7 +66,7 @@
 
 
 
-  <!-- <section class="text-center">
+    <!-- <section class="text-center">
     <div class="container">
         <div class="row">
             <div class="col-4">
@@ -65,13 +83,14 @@
     </div>
   </section> -->
 
- 
-   
 
-</main>
 
-<%- include ('./partials/footer.ejs'); -%>
+
+  </main>
+
+  <%- include ('./partials/footer.ejs'); -%>
 
 
 </body>
+
 </html>
