--- a/views/home.ejs
+++ b/views/home.ejs
@@ -22,66 +22,95 @@
   <main role="main">
 
     <div class="container">
-      <div class="card border-0 shadow my-5">
-        <div class="card-body p-5">
-          <div class="row">
-            <div class="col-6">
-              <h1>Sarah Rios</h1>
-              <p class="lead text-muted">Full-Stack Web Developer</p>
-              <img class="rounded img-fluid"
-                src="https://lh3.googleusercontent.com/0UTEnPo_KAYqF4iGOcSg5_W8d5sIVqSYrPiZhMeBw80xdF1Oa3oRHEREYrJiwUTn6WMzFmUssld_yOVLOtfESEC_zDkXmMhpBE0rArSwsagXC_-_sUXLY3b8310YHB9PhQQY1gRbNjhMRw3ZCnGWO-8VFhM1GDJF3dJdSaFCZO5si5M4WscDRIH-ngChu-YaJPLyAjRp_RnhU-Hfh89WamwF16ESV2XwKXUTGklYfiQehyjqdGkFcNsB9Km8nJ8ogC2rPutFp_2KekqlAY5x5E6ljJg7LQ5lvruluPrH9hHpu92qU-uGk4UqY0U3eBTtwGmq7QxNE6o4SJkW8Ow-5EtoWfNdltuFsukAEwecbLcCPqL_k76TCauCfHH-K3ORhpJvmbsPbV-dlTmHeYpZiNYonF-TPhhoJWvrApEgJKKgzVkgS3n_bKbYnBqEhNq_zYHy9WLmH5mWaXOirxm1Ngj_RziR5j7m__-ITTBSxq48b-ujhrFoLaXRMzIJDz9SGvfRh9Ng5YCxatgSmGK_F19mjy64RkRu_TJnnEVUjxM2olbpg16mZG8wJlVfk03VJOrzYgYfNFRbPWI6qQxgZbbrHRbk9vmlhHSe0DhrkpOulmYe_jRWhnN2Nq8Op-vr-kNPhYXLAVP9rTa1j9h7Grfq8KXi40jI1T_w9PdxACARpJoHb-WB=w281-h386-no">
-            </div>
-            <div class="col-6 d-flex flex-column justify-content-center">
 
-              <p>My name is Sarah. I'm a Geographic Information Systems (GIS) Analyst turned Full-Stack Developer. Due to the nature of GIS, it is a natural progression.
-      
-              <p>I enjoy exploring systems and learning about how things work together. I often find myself in classrooms and workshops, and I enjoy participating in local communities.</p>
-
-              <p>You'll find me in Houston, spending the weekends with my dogs and playing board games with friends. Feel free to connect with me below.</p>
-
-            </div> 
-          </div>
-          <div class="row">
-             <div class="col-6 offset-6 d-flex justify-content-center">
-                <a class="p-1" style="height: 40px;" href="#"><img alt="GitHub" src='/images/github.svg' height="40px"
-                    width="40px"></a>
-                <a class="p-1"style="height: 40px;" href="#"><img alt="LinkedIn" src='/images/linkedin.svg' height="40px"
-                    width="40px"></a>
-                <a class="p-1" style="height: 40px;" href="#"><img alt="email" src='/images/email.svg' height="40px" width="40px"></a>
-              </div>
-          </div>
-          <p>
-            <a href="#" class="btn btn-dark">Check out my Projects</a>
-          </p>
-          <!-- <div style="height: 700px"></div>
-          <p class="lead mb-0">You've reached the end!</p> -->
-        </div>
-      </div>
-    </div>
-
-
-
-
-
-
-
-
-    <!-- <section class="text-center">
-    <div class="container">
-        <div class="row">
-            <div class="col-4">
-                <img class="rounded img-fluid" src="https://lh3.googleusercontent.com/Fl246rQ9aMT2VlWKpUCQJn_KDGQCfvohbjIoVMKRrbOu6LDgURB4pIsdAa6i0MiLq1lAjL562b5F_DxH9MG3l6o9SD-7W6QT-xr_pLpSIcxLVFKbe34mC9yodKVj9vjQNySML0ehmE_8rZMu6Wa98-oM8ZUMAyIQGHuKZTsfmF9UujulSJG0soxw3hDZzfE24crH3NUSJU7LU18aGxeTgrT-OH1gUhUPr7nbxLvBHlFSgtzYDwkTjfp2PL7cQ4HtBYLQ-pJEpRDf5CVCs9kkNdDarvBwkXmGu_R-KFKxcr8BEKGOVJYDt57Tnf516tvfVucaOi7AyLd30-2hmUrTpTSDmTM_vB8q-AQw53Jm72b6gVZ-2i4iZFwrFJTbelnwFjZ0_Z7dFMkzrCktJjwhMug2EDDb7VsdJIaJ2TBvYkuEbHdinUXT6oBXQ_QYXpzos4i8Z2FR15pq0uitTHjrPj765HXFo_fXSzMSaO6VUmbFtmcFtSXdT36OPXZIILKIujcWPGwZB8PyWIeWYN8WZZeeMuD9mYJMHv0VLFhBSrPkVb1qt_Rb8CU1mPOov2cVFDNJjQi_ahwSecYE5mnlfAXuZ8ormu6m0Vn7Ce6IGtDCQEXBBaogumAGUlTfINsMT87g9cizfLnlp9f58VWYT3v2aPbfCAths-3nv3uVAb2hShMJoy6Y=w283-h428-no">
-            </div>
-            <div class="col-4">
+          <div id="about-me w-50">
+            <div class="row">
+              <div class="col-5 col-sm-12">
                 <h1>Sarah Rios</h1>
-                <p class="lead text-muted">Full-Stack Web Developer.</p>
-            </div>   
-         </div>
-         <p>
-            <a href="#" class="btn btn-primary my-2">Check out my Projects</a>
-        </p>
+                <p class="lead text-muted">Full-Stack Web Developer</p>
+                <img class="rounded img-fluid"
+                  src="https://lh3.googleusercontent.com/0UTEnPo_KAYqF4iGOcSg5_W8d5sIVqSYrPiZhMeBw80xdF1Oa3oRHEREYrJiwUTn6WMzFmUssld_yOVLOtfESEC_zDkXmMhpBE0rArSwsagXC_-_sUXLY3b8310YHB9PhQQY1gRbNjhMRw3ZCnGWO-8VFhM1GDJF3dJdSaFCZO5si5M4WscDRIH-ngChu-YaJPLyAjRp_RnhU-Hfh89WamwF16ESV2XwKXUTGklYfiQehyjqdGkFcNsB9Km8nJ8ogC2rPutFp_2KekqlAY5x5E6ljJg7LQ5lvruluPrH9hHpu92qU-uGk4UqY0U3eBTtwGmq7QxNE6o4SJkW8Ow-5EtoWfNdltuFsukAEwecbLcCPqL_k76TCauCfHH-K3ORhpJvmbsPbV-dlTmHeYpZiNYonF-TPhhoJWvrApEgJKKgzVkgS3n_bKbYnBqEhNq_zYHy9WLmH5mWaXOirxm1Ngj_RziR5j7m__-ITTBSxq48b-ujhrFoLaXRMzIJDz9SGvfRh9Ng5YCxatgSmGK_F19mjy64RkRu_TJnnEVUjxM2olbpg16mZG8wJlVfk03VJOrzYgYfNFRbPWI6qQxgZbbrHRbk9vmlhHSe0DhrkpOulmYe_jRWhnN2Nq8Op-vr-kNPhYXLAVP9rTa1j9h7Grfq8KXi40jI1T_w9PdxACARpJoHb-WB=w281-h386-no">
+              </div>
+              <div class="col-5">
+
+                <p>My name is Sarah. I'm a Geographic Information Systems (GIS) Analyst turned Full-Stack Developer. Due
+                  to the
+                  nature of GIS, it is a natural progression.
+
+                  <p>I enjoy exploring systems and learning about how things work together. I often find myself in
+                    classrooms and
+                    workshops, and I enjoy participating in local communities.</p>
+
+                  <p>You'll find me in Houston, spending the weekends with my dogs and playing board games with friends.
+                    Feel free
+                    to connect with me below.</p>
+
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-5 offset-5 d-flex justify-content-center">
+                <a class="p-1" style="height: 40px;" href="#"><svg height="40px" width="40px">
+                    <path  d='/images/github.svg'></path>
+                  </svg></a>
+                <a class="p-1" style="height: 40px;" href="#"><img alt="LinkedIn" src='/images/linkedin.svg'
+                    height="40px" width="40px"></a>
+                <a class="p-1" style="height: 40px;" href="#"><img alt="email" src='/images/email.svg' height="40px"
+                    width="40px"></a>
+              </div>
+            </div>
+            <p>
+              <a href="#" class="btn btn-dark">Check out my Projects</a>
+            </p>
+          </div>
+          <div id="skills">
+            <div class="row">
+              <div class="col-12">
+                <p>Skills</p>
+                  HTML
+                  css
+                  js
+                  Node.js
+                  Express
+                  jquery
+                  AJAX
+                  APIs
+                  Bootstrap
+                  Sequelize
+                  PostgreSQL
+                  Microsoft SQL
+                  Postman
+                  Heroku
+                  React
+                  Redux
+                  Git 
+                  GitHub 
+                  Agile 
+                  c++
+                  Python
+                  Webpack
+                  Esri Web Services
+                  Esri ArcGIS Server
+                  Esri ArcPro
+                  Esri ArcMap
+
+              </div>
+            </div>
+
+
+          </div>
+
+
+
+
+
     </div>
-  </section> -->
+
+
+
+
+
+
+
 
 
 
